--- a/I/tema1.html
+++ b/I/tema1.html
@@ -13,7 +13,7 @@
         <p>Explorando la mente y el comportamiento humano</p>
     </header>
     <nav>
-        <a href="inde">Regresar</a>
+        <a href="index.html">Regresar</a>
         
     </nav>
     <main>
